...
        key: formKey,
        child: Column(
          mainAxisAlignment: MainAxisAlignment.start,
          crossAxisAlignment: CrossAxisAlignment.center,
          children: [
            CustomTextField(
              key: Key("PhoneNumberInput"),
              textInputType: TextInputType.phone,
              controller: numberKey,
              hintText: 'Enter Phone Number'.tr,
              labelText: 'Phone Number'.tr,
              validator: (value) {
                if (value == null || value.isEmpty) {
...
            ///////
            SizedBox(
              height: ScreenSizeUtils.getHeightInPercent(context, 10),
            ),
            ////////////
            AppButton.normalButton(
              key1: Key("LoginButton"),
              backgroundColor: AppColors.blackDark,
              titleSize: 15,
              title: 'Confirm'.tr,
              onPress: () {
                if (formKey.currentState!.validate()) {
                  authController.currentPhoneNumber = numberKey.text;
...
