...
  'App Language': 'لغة التطبيق',
  'Logout': 'تسجيل الخروج',
  'Select a Language': 'اختيار اللغة',
  'English': 'انجليزي',
  'Arabic': 'عربي',
  'Are you sure to logout ?': 'هل أنت متأكد من تسجيل الخروج ؟',
  'Confirm': 'تأكيد',
  'Back': 'رجوع',
  'Order Details': 'تفاصيل الطلب',
  'Product': 'المنتج',
  'General Info': 'معلومات عامة',
  'Price': 'السعر',
  'Tax': 'الضريبة',
...
  'Assign To Me': 'إسناد الطلب لي',
  'Convert To Shipped': 'تحويل إلى تم الشحن',
  'Convert To Out For Delivery': 'تحويل إلى خارج للتوصيل',
  'Changing Order Status Succeeded': 'تم تغيير حالة الطلب بنجاح',
  'The order status will be changed to "shipped"':
      'سيتم تحويل حالة الطلب لـ "تم الشحن"',
  'The order  will be assigned to you': 'سيتم إسناد الطلب لك',
  'The order status will be changed to "Out For Delivery"':
      'سيتم تحويل حالة الطلب لـ "خارج للتوصيل"',
  'Audio recording will start': 'سيتم بدء تسجيل الصوت',
  'You need voice recording permission': 'تحتاج إلى تفعيل سماحية تسجيل الصوت',
  'Are you sure to stop recording and leave this page ?':
      'هل أنت متأكد من إيقاف التسجيل و مغادرة هذه الصفحة ؟',
...
