...
      }
    }
    return Column(
      mainAxisAlignment: MainAxisAlignment.center,
      children: [
        AppButton.normalButton(
          key1: const Key('assignButton'),
          title: GlobalFunctions.getUserId() != order.assignToUserId
              ? 'Assign To Me'.tr
              : 'Convert To Out For Delivery'.tr,
          height: 40,
          titleSize: 15,
          backgroundColor: GlobalFunctions.getUserId() != order.assignToUserId
...
